# 10-Second-Intern

./: CMakeLists.txt  README.md  core_basic_window.c
.github/workflows/: build.yml  cmake-multi-platform.yml
src/: Machine.h  Object.h  Player.h  Printer.h  Task.h  core_basic_window.cpp  main.cpp  player.cpp
